apps/keycloak/app/httproute.yaml
apiVersion: "gateway.networking.k8s.io/v1"
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  hostnames:
    - "idp.mandacode.com"
  parentRefs:
    - name: eg
      namespace: default
      sectionName: "https"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: keycloak-service
          namespace: keycloak
          port: 8080
